# ChuddoEngine

./: .clang-format  .gitignore  CMakeLists.txt  Plan.md  README.md  Rebuild.bat  TODO.md  TOEDIT.md  build.bat  check_files.bat  clean_all.bat  clean_extra.bat  debug.bat  engine.cfg  forSlate.md  release.bat  run_debug.bat  run_release.bat  setup_dependencies.bat
Assets/Shaders/: basic.frag  basic.vert  mesh.frag  mesh.vert  test.frag
Include/: CoreMinimal.h  test.h
Include/Actors/: Actor.h  SunActor.h
Include/Application/: Application.h
Include/Components/Camera/: CameraComponent.h
Include/Components/Input/: InputComponent.h
Include/Components/Meshes/: MeshComponent.h
Include/Components/Scene/: SceneComponent.h
Include/Controllers/: PlayerController.h
Include/Core/: AppInfo.h  CEObject.h  CommandLine.h  Config.h
Include/Core/Render/: vertex.hpp
Include/Core/Render/Vulkan/: PipelineConfig.hpp  VKBufferManager.hpp  VKCommandManager.hpp  VKContext.hpp  VKPipelineManager.hpp  VKUniformManager.hpp  Vkfuncs.hpp
Include/Core/Rendering/Data/: RenderData.h
Include/Engine/Application/: Application.h
Include/Engine/Core/: AppInfo.h  Application.h  CEObject.h  CollisionProfileManager.h  CollisionSystem.h  CommandLine.h  Config.h  CoreTypes.h  GuardedMain.h  Object.h  Reflection.h
Include/Engine/Core/Utilities/: ObjLoader.h
Include/Engine/Editor/: EditorApplication.h
Include/Engine/Editor/Selection/: ActorSelection.h
Include/Engine/Editor/UI/: PropertyEditor.h  SlateCore.h  SlateInputComponent.h  VulkanSlateRenderer.h  Widgets.h
Include/Engine/GamePlay/Actors/: Actor.h  Character.h  Pawn.h  SunActor.h  TerrainActor.h
Include/Engine/GamePlay/CollisionSystem/: BoxComponent.h  CapsuleComponent.h  CollisionComponent.h  CollisionTypes.h  SphereComponent.h  TerrainCollisionComponent.h
Include/Engine/GamePlay/Components/: BoxComponent.h  CEStaticMeshComponent.h  CameraComponent.h  CapsuleComponent.h  CollisionComponent.h  InputComponent.h  MeshCollisionComponent.h  MeshComponent.h  PhysicsComponent.h  PlaneComponent.h  SceneComponent.h  SphereComponent.h  SpringArmComponent.h  StaticMeshComponent.h
Include/Engine/GamePlay/Controllers/: PlayerController.h
Include/Engine/GamePlay/GameInstance/: CEGameInstance.h  GameInstance.h
Include/Engine/GamePlay/Input/: InputSystem.h
Include/Engine/GamePlay/World/: CEWorld.h  World.h
Include/Engine/Utils/: Logger.h
Include/Engine/Utils/Math/: AABB.h  AllMath.h  CEMath.hpp  Color.h  Frustum.h  MathConstants.h  MathConstants.hpp  Matrix4.h  Matrix4x4.hpp  Plane.h  Quaternion.h  Quaternion.hpp  Ray.h  Sphere.h  Vector2.h  Vector2D.hpp  Vector3.h  Vector3D.hpp  Vector4.h  Vector4D.hpp
Include/Game/Actors/: PlayerCharacter.h  TestPawn.h
Include/Game/Application/: GameApplication.h
Include/Game/GameInstance/: GameInstance.h
Include/Game/World/: MainLevel.h
Include/GameInstance/: CEGameInstance.h
Include/GamePlay/Actors/: Actor.h  SunActor.h
Include/GamePlay/Components/Base/: Component.h
Include/GamePlay/Components/Camera/: CameraComponent.h
Include/GamePlay/Components/Input/: InputComponent.h
Include/GamePlay/Components/Meshes/: MeshComponent.h
Include/GamePlay/Components/Scene/: SceneComponent.h
Include/GamePlay/Controllers/: PlayerController.h
Include/GamePlay/GameInstance/: CEGameInstance.h
Include/GamePlay/Pawns/: Pawn.h
Include/GamePlay/World/: CEWorld.h
Include/GamePlay/World/Levels/: CELevel.h
Include/Input/: InputSystem.h
Include/Pawns/: Pawn.h
Include/Rendering/Data/: RenderData.h  Vertex.h
Include/Rendering/Vulkan/: BufferManager.h  CommandBufferManager.h  DescriptorManager.h  DeviceManager.h  PipelineManager.h  SwapchainManager.h  VulkanContext.h
Include/Rendering/Vulkan/Core/: VulkanContext.h
Include/Rendering/Vulkan/Integration/: RenderSystem.h
Include/Rendering/Vulkan/Managers/: BufferManager.h  CommandBufferManager.h  DescriptorManager.h  PipelineManager.h  SwapchainManager.h
Include/World/: CEWorld.h
Include/World/Levels/: CELevel.h
Source/: main.cpp
Source/Actors/: Actor.cpp  SunActor.cpp
Source/Application/: Application.cpp
Source/Components/Base/: Component.cpp
Source/Components/Camera/: CameraComponent.cpp
Source/Components/Input/: InputComponent.cpp
Source/Components/Meshes/: MeshComponent.cpp
Source/Components/Scene/: SceneComponent.cpp
Source/Controllers/: PlayerController.cpp
Source/Core/: AppInfo.cpp  CEObject.cpp  CommandLine.cpp  Config.cpp  GuardedMain.cpp
Source/Core/Render/: vertex.cpp
Source/Core/Render/Vulkan/: PipelineConfig.cpp  VKBufferManager.cpp  VKCommandManager.cpp  VKContext.cpp  VKPipelineManager.cpp  VKUniformManager.cpp  Vkfuncs.cpp
Source/Core/Rendering/Data/: Vertex.cpp
Source/Engine/Application/: Application.cpp
Source/Engine/Core/: AppInfo.cpp  Application.cpp  CEObject.cpp  CollisionProfileManager.cpp  CollisionSystem.cpp  CommandLine.cpp  Config.cpp  GuardedMain.cpp  Object.cpp  Reflection.cpp
Source/Engine/Core/Utilities/: ObjLoader.cpp
Source/Engine/Editor/: EditorApplication.cpp
Source/Engine/Editor/Selection/: ActorSelection.cpp
Source/Engine/Editor/UI/: PropertyEditor.cpp  SlateCore.cpp  (+3 more)
Source/Engine/Utils/: Logger.cpp
Source/Game/Actors/: PlayerCharacter.cpp
Source/Game/Application/: GameApplication.cpp
Source/Game/GameInstance/: GameInstance.cpp
Source/Game/World/: MainLevel.cpp
Source/GameInstance/: CEGameInstance.cpp
Source/GamePlay/Actors/: Actor.cpp  SunActor.cpp
Source/GamePlay/Controllers/: PlayerController.cpp
Source/GamePlay/GameInstance/: CEGameInstance.cpp
Source/GamePlay/Input/: InputSystem.cpp
Source/GamePlay/Pawns/: Pawn.cpp
Source/GamePlay/World/: CEWorld.cpp
Source/Input/: InputSystem.cpp
Source/Pawns/: Pawn.cpp
Source/Rendering/Data/: Vertex.cpp
Source/Rendering/Vulkan/: BufferManager.cpp  CommandBufferManager.cpp  DescriptorManager.cpp  DeviceManager.cpp  PipelineManager.cpp  SwapchainManager.cpp  VulkanContext.cpp  VulkanUtils.cpp
Source/Utils/: Logger.cpp
Source/World/: CEWorld.cpp
Source/World/Levels/: CELevel.cpp
(+102 files in other folders)
